force-app/main/default/objects/Case_Status_History_Detail__c/Case_Status_History_Detail__c.object-meta.xml
<CustomObject>
    <description>Object is created to capture the  duration in which case is in particular status</description>
    <label>Case Status History Detail</label>
    <nameField>
        <displayFormat>Case Status -{0000}</displayFormat>
        <label>Case Status History Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CaseStatusHistoryDetails</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>