force-app/main/default/objects/Case_Status_History_Detail__c/fields/FACT_Duration_in_Assigned__c.field-meta.xml
<CustomField>
    <fullName>FACT_Duration_in_Assigned__c</fullName>
    <formula>IF( Status__c=&#39;Assigned&#39; , TEXT(
FLOOR((Parent_Case__r.StatusAssignedInMinutes__c/1440))
) &amp; &quot; Days / &quot; &amp;
TEXT(
FLOOR((Parent_Case__r.StatusAssignedInMinutes__c)/60))
&amp;&quot; Hours / &quot; &amp;
TEXT(
ROUND(MOD((Parent_Case__r.StatusAssignedInMinutes__c),60),2 )
) &amp;&quot; Minutes &quot;, &#39; &#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration in Assigned</label>
    <type>Text</type>
</CustomField>