force-app/main/default/objects/Case_Status_History_Detail__c/fields/FACT_DurationAccountTeamOnHold__c.field-meta.xml
<CustomField>
    <fullName>FACT_DurationAccountTeamOnHold__c</fullName>
    <formula>IF(Sub_Status__c=&#39;Account Team on Hold&#39;, Status_Duration__c ,Null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration in Account Team on Hold</label>
    <type>Text</type>
</CustomField>