force-app/main/default/objects/Case_Status_History_Detail__c/fields/FACT_DurationInFinanceOnHold__c.field-meta.xml
<CustomField>
    <fullName>FACT_DurationInFinanceOnHold__c</fullName>
    <formula>IF(Sub_Status__c=&#39;Finance on Hold&#39;, Status_Duration__c ,Null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration in Finance on Hold</label>
    <type>Text</type>
</CustomField>