force-app/main/default/objects/Case_Status_History_Detail__c/fields/FACT_DurationInJDEAMSOnHold__c.field-meta.xml
<CustomField>
    <fullName>FACT_DurationInJDEAMSOnHold__c</fullName>
    <formula>IF(Sub_Status__c=&#39;JDE AMS on Hold&#39;, Status_Duration__c ,Null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration in JDE AMS on Hold</label>
    <type>Text</type>
</CustomField>