force-app/main/default/objects/Case_Status_History_Detail__c/fields/FACT_DurationInJDEInstallBaseNotified__c.field-meta.xml
<CustomField>
    <fullName>FACT_DurationInJDEInstallBaseNotified__c</fullName>
    <formula>IF(Sub_Status__c=&#39;JDE Install Base Notified&#39;, Status_Duration__c ,Null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration in JDE Install Base Notified</label>
    <type>Text</type>
</CustomField>