force-app/main/default/objects/Case_Status_History_Detail__c/fields/FACT_DurationInNew__c.field-meta.xml
<CustomField>
    <fullName>FACT_DurationInNew__c</fullName>
    <formula>IF(Status__c=&#39;New&#39;, TEXT(
FLOOR((Parent_Case__r.StatusNewInMinutes__c/1440))
) &amp; &quot; Days / &quot; &amp;
TEXT(
FLOOR((Parent_Case__r.StatusNewInMinutes__c)/60))
&amp;&quot; Hours / &quot; &amp;
TEXT(
ROUND(MOD((Parent_Case__r.StatusNewInMinutes__c),60),2 )
) &amp;&quot; Minutes &quot;, &#39; &#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration in New</label>
    <type>Text</type>
</CustomField>