force-app/main/default/objects/Case_Status_History_Detail__c/fields/FACT_DurationInPendingInstall__c.field-meta.xml
<CustomField>
    <fullName>FACT_DurationInPendingInstall__c</fullName>
    <formula>IF(Sub_Status__c=&#39;Pending Install&#39;, Status_Duration__c ,Null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration in Pending Install</label>
    <type>Text</type>
</CustomField>