force-app/main/default/objects/Case_Status_History_Detail__c/fields/Parent_Case__c.field-meta.xml
<CustomField>
    <fullName>Parent_Case__c</fullName>
    <description>Master-Detail relationship field for storing Case record..</description>
    <label>Parent Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case Status History Details</relationshipLabel>
    <relationshipName>CaseStatusHistoryDetails</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>