force-app/main/default/objects/Case_Status_History_Detail__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Text field for capturing Case status.</description>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>