force-app/main/default/objects/Case_Status_History_Detail__c/fields/Status_Duration__c.field-meta.xml
<CustomField>
    <fullName>Status_Duration__c</fullName>
    <description>Formula field for capturing Case duration.</description>
    <formula>TEXT( 
FLOOR(Status_Duration_Days__c) 
) &amp; &quot; Days / &quot; &amp; 
TEXT( 
FLOOR(MOD((Status_Duration_Days__c)*24,24)) 
) &amp;&quot; Hours / &quot; &amp; 
TEXT( 
ROUND(MOD((Status_Duration_Days__c)*1440,60),2) 
) &amp;&quot; Minutes &quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Duration</label>
    <type>Text</type>
</CustomField>