force-app/main/default/objects/Case_Status_History_Detail__c/fields/Status_Duration_Days__c.field-meta.xml
<CustomField>
    <fullName>Status_Duration_Days__c</fullName>
    <description>Formula field for calculation duration of case status in days.</description>
    <formula>if(Status_End_Time__c == null || ISBLANK(Status_End_Time__c), NOW() - Status_Start_Time__c, Status_End_Time__c - Status_Start_Time__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Duration Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>