force-app/main/default/objects/Case_Status_History_Detail__c/fields/Status_Duration_Hours__c.field-meta.xml
<CustomField>
    <fullName>Status_Duration_Hours__c</fullName>
    <description>Formula field to capture duration of Case status in Hours.</description>
    <formula>Status_Duration_Days__c * 24</formula>
    <label>Status Duration Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>