force-app/main/default/objects/Case_Status_History_Detail__c/fields/Status_Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Status_Duration_Minutes__c</fullName>
    <description>Formula field to capture Duration of status in Minutes.</description>
    <formula>Status_Duration_Hours__c * 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Duration Minutes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>