force-app/main/default/objects/Case_Status_History_Detail__c/fields/Status_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Status_End_Time__c</fullName>
    <description>Date/Time field for capturing End time of Case status when Case status is changed.</description>
    <label>Status End Time</label>
    <type>DateTime</type>
</CustomField>