force-app/main/default/objects/Case_Status_History_Detail__c/fields/Status_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Status_Start_Time__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>Date/Time field for capturing Start time of Case Status.</description>
    <label>Status Start Time</label>
    <type>DateTime</type>
</CustomField>