force-app/main/default/objects/Case_Status_History_Detail__c/fields/Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Sub_Status__c</fullName>
    <description>Text field for capturing Sub Status of Case record.</description>
    <label>Sub Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>